--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,26 @@
-### IntelliJ IDEA ###
+# Autosave files
+*~
+\#*#
+.\#*
+
+# Compiled class file
+*.class
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+.idea/vcs.xml
+.idea/misc.xml
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Log file
+*.log
 
-### VS Code ###
-.vscode/
+# BlueJ files
+*.ctxt
 
-### Mac OS ###
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
 .DS_Store
